# practice-hub

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts
docs/: practice-hub-phases.md  practice-hub-spec.md
src/: App.tsx  config.ts  firebase.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  types.ts
src/auth/: oauth.ts  tokens.ts
src/components/: SessionView.tsx  SignInScreen.tsx
src/components/chat/: ChatPanel.tsx
src/components/player/: MediaPlayer.tsx  Metronome.tsx  useAudioEngine.ts
src/components/reports/: PracticeTimeReport.tsx  RatingTrendChart.tsx
src/components/session/: ExerciseCard.tsx  ItemGroup.tsx  LastSessionInfo.tsx  QuickAddPanel.tsx  SequentialSessionModal.tsx  SessionHeader.tsx  SessionModal.tsx  SongCard.tsx  StudyMaterialCard.tsx
src/components/session/forms/: ExerciseSessionForm.tsx  OpenSessionForm.tsx  SongSessionForm.tsx  StudyMaterialSessionForm.tsx
src/hooks/: useAuth.ts  useOpenAIKey.ts
src/lib/: soundtouch.d.ts  soundtouch.js
tests/: player.spec.ts
