[package]
name = "practice-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "practice_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
url = "2"
tiny_http = "0.12"
percent-encoding = "2.3.2"
